# CyberTranscritor

./: .coverage  .gitignore  LICENSE  README-en.md  README-es.md  README-zh.md  README.md  README.txt  config.py  deepseek_app.py  launcher.py  lista_arquivos.txt  lista_completa.txt  main.py  main_app.py  meeting_app.py  pyproject.toml  reorganizar.py  reorganizar_final.py  requirements-backup.txt  requirements-base.txt  requirements-deepseek.txt  requirements-dev.txt  requirements-meeting.txt  requirements.txt  run.fish  run_tests.fish  test_tts.py  test_websearch.py  transcritor_app.py
.github/workflows/: test.yml
apps/deepseek/: controller.py  window.py
apps/meeting/: controller.py  window.py
apps/transcritor/: window.py
backend/: audio_recorder.py  corrector.py  deepseek_client.py  transcriber.py  translator.py  tts.py  web_search.py
backend/audio/: capture.py  player.py  recorder.py
backend/background/: background_recorder.py
backend/dbus/: dbus_service.py
backend/models/: model_manager.py
controller/: app_controller.py  meeting_controller.py
core/: config.py
core/backend/: tts.py  (+5 more)
frontend/: deepseek_window.py  dialogs.py  main_window.py  meeting_window.py  settings_window.py  styles.py  tray_icon.py  widgets.py
locales/: en.json  es.json  pt-br.json  zh.json
tests/: conftest.py  test_config_persistence.py  test_deepseek_client.py  test_hardware_detector.py  test_i18n.py  test_logger.py  test_translation_cache.py
utils/: config_persistence.py  constants.py  hardware_detector.py  helpers.py  i18n.py  logger.py  settings.py  tooltip.py
(+34 files in other folders)
