[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcritor-suite"
version = "0.1.0"
description = "Suíte de transcrição, tradução e gravação de reuniões"
authors = [{name = "Seu Nome", email = "seu@email.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # As dependências serão gerenciadas pelos requirements, não listar aqui
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "apps*"]